syntax = "proto3";
package video;
option go_package = "video";

import "user.proto";

message douyin_feed_request {
  optional int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  optional string token = 2; // 可选参数，登录用户设置
}

message douyin_feed_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 视频列表
  optional int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message douyin_publish_action_request {
  string token = 1; // 用户鉴权token
  bytes data = 2; // 视频数据
  string title = 3; // 视频标题
}

message douyin_publish_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

message douyin_publish_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_publish_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户发布的视频列表
}

message Video {
  int64 id = 1; // 视频唯一标识
  user.User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

//message User {
//  int64 id = 1; // 用户id
//  string name = 2; // 用户名称
//  optional int64 follow_count = 3; // 关注总数
//  optional int64 follower_count = 4; // 粉丝总数
//  bool is_follow = 5; // true-已关注，false-未关注
//}

service VideoSvr {
  //返回视频列表
  rpc Feed(douyin_feed_request) returns (douyin_feed_response);
  //视频发布
  rpc Publish (douyin_publish_action_request) returns (douyin_publish_action_response);
  //用户视频列表
  rpc PublishList (douyin_publish_list_request) returns (douyin_publish_list_response);
}


